--- a/projetsysteme/style.css
+++ b/projetsysteme/style.css
@@ -669,7 +669,7 @@ QTextEdit {
   background-color: #19232D;
   color: #F0F0F0;
   border-radius: 4px;
-  border: 1px solid #32414B;
+  border: 1px solid #5c778a;
   max-height: 1rem;
 }
 
